# emscripten-c2e

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.old  README.md  Rules.mk  Settings.mk  cmake_install.cmake  webc2e.html  webc2e.js  webc2e.wasm  webc2e.worker.js
common/: BasicException.cpp  BasicException.h  BasicException.od  C2eDebug.cpp  C2eDebug.h  C2eDebug.od  C2eTypes.h  CMakeLists.txt  CStyleException.cpp  CStyleException.h  Catalogue.cpp  Catalogue.h  Catalogue.od  Configurator.cpp  Configurator.h  Configurator.od  FileFuncs.cpp  FileFuncs.h  FileFuncs.od  FileLocaliser.cpp  FileLocaliser.h  FileLocaliser.od  FileScanner.cpp  FileScanner.h  GameInterface.cpp  GameInterface.h  Grapher.cpp  Grapher.h  GtkAdapter.cpp  GtkAdapter.h  LabelThing.cpp  LabelThing.h  Makefile  MapScanner.cpp  MapScanner.h  Position.cpp  Position.od  ProfanityFilter.cpp  ProfanityFilter.h  ProfanityFilter.od  (+30 more)
common/PRAYFiles/: CMakeLists.txt  Makefile  PrayBuilder.cpp  PrayBuilder.h  PrayBuilder.od  PrayChunk.cpp  PrayChunk.h  PrayChunk.od  PrayException.h  PrayHandlers.cpp  PrayHandlers.h  PrayManager.cpp  PrayManager.h  PrayStructs.h  StringIntGroup.cpp  StringIntGroup.h  cmake_install.cmake  module.mk
common/launchurl/: .cvsignore  Makefile  README  launchurl.c  launchurl.h  main.c  try_browservar.c  try_gnome.c  try_kde.c  try_misc.c
engine/: .cvsignore  AgentManager.cpp  AgentManager.h  Angle.cpp  Angle.h  App.cpp  App.h  C2eServices.cpp  C2eServices.h  CMakeLists.txt  ChangeLog.txt  Circle.cpp  Circle.h  Classifier.cpp  Classifier.h  CosInstaller.cpp  CosInstaller.h  CreaturesArchive.cpp  CreaturesArchive.h  CustomHeap.cpp  CustomHeap.h  DirectoryManager.cpp  DirectoryManager.h  Entity.cpp  Entity.h  File.cpp  File.h  FilePath.cpp  FilePath.h  FlightRecorder.cpp  FlightRecorder.h  General.cpp  General.h  InputEvent.h  InputManager.cpp  InputManager.h  Makefile  Maths.cpp  Maths.h  Message.cpp  (+42 more)
engine/AgentDisplay/: CMakeLists.txt  EntityImage.cpp  EntityImage.h  EntityImageClone.cpp  EntityImageClone.h  EntityImageWithEmbeddedCamera.cpp  EntityImageWithEmbeddedCamera.h  Makefile  cmake_install.cmake  module.mk
engine/Agents/: Agent.cpp  Agent.h  AgentConstants.cpp  AgentConstants.h  AgentHandle.cpp  AgentHandle.h  AgentSuicideException.h  CMakeLists.txt  CameraPart.cpp  CameraPart.h  CompoundAgent.cpp  CompoundAgent.h  CompoundPart.cpp  CompoundPart.h  InputPort.cpp  InputPort.h  Makefile  MessageQueue.cpp  MessageQueue.h  OutputPort.cpp  OutputPort.h  PointerAgent.cpp  PointerAgent.h  Port.cpp  Port.h  PortBundle.cpp  PortBundle.h  QuoteFactory.cpp  QuoteFactory.h  QuoteFactoryHelper.h  SimpleAgent.cpp  SimpleAgent.h  UIPart.cpp  UIPart.h  Vehicle.cpp  Vehicle.h  cmake_install.cmake  module.mk
engine/Camera/: CMakeLists.txt  Camera.cpp  Camera.h  CameraSprite.cpp  CameraSprite.h  MainCamera.cpp  MainCamera.h  Makefile  MapImage.cpp  MapImage.h  RemoteCamera.cpp  RemoteCamera.h  cmake_install.cmake  module.mk
engine/Caos/: AgentHandlers.cpp  AgentHandlers.cpp~  AgentHandlers.h  AutoDocumentationTable.cpp  AutoDocumentationTable.h  CAOSConstants.h  CAOSDescription.cpp  CAOSDescription.h  CAOSException.cpp  CAOSException.h  CAOSMachine.cpp  CAOSMachine.h  CAOSTables.cpp  CAOSVar.cpp  CAOSVar.h  CMakeLists.txt  CompoundHandlers.cpp  CompoundHandlers.h  CreatureHandlers.cpp  CreatureHandlers.h  DebugHandlers.cpp  DebugHandlers.h  DebugInfo.cpp  DebugInfo.h  DisplayHandlers.cpp  DisplayHandlers.h  GeneralHandlers.cpp  GeneralHandlers.h  HistoryHandlers.cpp  HistoryHandlers.h  Lexer.cpp  Lexer.h  MacroScript.cpp  MacroScript.h  Makefile  MapHandlers.cpp  MapHandlers.h  OpSpec.cpp  OpSpec.h  Orderiser.cpp  (+21 more)
engine/Catalogues/: Brain-de.catalogue  Brain-es.catalogue  Brain-fr.catalogue  Brain-it.catalogue  Brain-nl.catalogue  Brain.catalogue  CAOS.catalogue  Norn-de.catalogue  Norn-es.catalogue  Norn-fr.catalogue  Norn-it.catalogue  Norn-nl.catalogue  Norn.catalogue  System-de.catalogue  System-es.catalogue  System-fr.catalogue  System-it.catalogue  System-nl.catalogue  System.catalogue  vocab constructs.catalogue  voices.catalogue
engine/Creature/: AgentFacultyInterface.h  BodyPartOverlay.cpp  BodyPartOverlay.h  CMakeLists.txt  Creature.cpp  Creature.h  CreatureAgent.cpp  CreatureAgent.h  CreatureConstants.h  CreatureFacultyInterface.h  CreatureHead.cpp  CreatureHead.h  Definitions.h  ExpressiveFaculty.cpp  ExpressiveFaculty.h  Faculty.cpp  Faculty.h  Genome.cpp  Genome.h  GenomeStore.cpp  GenomeStore.h  LifeFaculty.cpp  LifeFaculty.h  LinguisticFaculty.cpp  LinguisticFaculty.h  Makefile  MotorFaculty.cpp  MotorFaculty.h  MusicFaculty.cpp  MusicFaculty.h  ReproductiveFaculty.cpp  ReproductiveFaculty.h  SensoryFaculty.cpp  SensoryFaculty.h  SkeletalCreature.cpp  SkeletalCreature.h  Skeleton.cpp  Skeleton.h  SkeletonConstants.h  Vocab.cpp  (+5 more)
engine/Display/: BackGroundGallery.h  Background.cpp  Background.h  Bitmap.cpp  Bitmap.h  CMakeLists.txt  Camera.h  ClonedGallery.cpp  ClonedGallery.h  ClonedSprite.cpp  ClonedSprite.h  CompressedBitmap.cpp  CompressedBitmap.h  CompressedGallery.cpp  CompressedGallery.h  CreatureGallery.cpp  CreatureGallery.h  DisplayEngine.cpp  DisplayEngine.h  DisplayEnginePlotFunctions.cpp  DisplayEnginePlotFunctions.h  DisplayErrorConstants.h  DrawableObject.cpp  DrawableObject.h  DrawableObjectHandler.cpp  DrawableObjectHandler.h  EasterEgg.cpp  EasterEgg.h  EntityImage.cpp  EntityImage.h  EntityImageClone.cpp  EntityImageClone.h  ErrorDialog.h  ErrorMessageHandler.cpp  ErrorMessageHandler.h  FastEntityImage.cpp  FastEntityImage.h  Gallery.cpp  Gallery.h  Line.cpp  (+22 more)
engine/Map/: CARates.cpp  CARates.h  CMakeLists.txt  Makefile  Map.cpp  Map.h  MapCA.cpp  RoomCA.cpp  RoomCA.h  cmake_install.cmake  module.mk
engine/Sound/: CDRomDevice.cpp  CDRomDevice.h  CMakeLists.txt  Makefile  MidiModule.cpp  MidiModule.h  MusicAction.cpp  MusicAction.h  MusicAleotoricLayer.cpp  MusicAleotoricLayer.h  MusicEffect.cpp  MusicEffect.h  MusicErrors.h  MusicExpression.cpp  MusicExpression.h  MusicGlobals.cpp  MusicGlobals.h  MusicLayer.cpp  MusicLayer.h  (+26 more)
(+138 files in other folders)
